--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta Tag-->
+    <meta name="Love running. Club for runners in dublin, Ireland. Urban running, trail running. Dublin docklands and Pheonix Park">
+    <meta keyword="love running,love,run,running,ireland,dublin"
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
