Creat navigation section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
         </a>
     </header>
     <!--Main-->
-    <main>Main Content</main>
+    <main>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Gallery</a></li>
+            <li><a href="">Sign up</a></li>
+        </ul>
+    </main>
     <!--Footer-->
     <footer>Footer</footer>
     
