Fixed ul was in main now in nav

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     <header>
         <a href="index.html">
             <h1 id="logo">
-                Love Running
-            </h1>
+                Love Running</h1>
         </a>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Sign up</a></li>
+            </ul>
+        </nav>
     </header>
     <!--Main-->
-    <main>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">Sign up</a></li>
-        </ul>
-    </main>
+    <main>Main Content</main>
     <!--Footer-->
     <footer>Footer</footer>
     
