--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Meta Tag-->
-    <meta name="Love running. Club for runners in dublin, Ireland. Urban running, trail running. Dublin docklands and Pheonix Park">
-    <meta keyword="love running,love,run,running,ireland,dublin"
-    <!--Title-->
+    <!-- Meta tags for search engines -->
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <!-- Title -->
     <title>Love Running</title>
-    <!--Favicon-->
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <!--StyleSheet-->
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-
 </head>
+
 <body>
-    <!--Header-->
+    <!-- Header -->
     <header>
         <a href="index.html">
-            <h1 id="logo">
-                Love Running</h1>
+            <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">
@@ -30,14 +32,18 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="gallery.html" class="active">Gallery</a></li>
-                <li><a href="signup.html" class="active">Sign Up</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
-    <!--Main-->
-    <main>Main Content</main>
-    <!--Footer-->
+
+    <!-- Main content -->
+    <main>
+        <section id="hero"></section>
+    </main>
+
+    <!-- Footer -->
     <footer>
         <ul id="social-networks">
             <li>
@@ -62,8 +68,9 @@
             </li>
         </ul>
     </footer>
-    
-    <!-- Font awsome -->
+
+    <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/de0549e373.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
